--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "focus"
     ],
     "dependencies": {
-        "react-native-root-siblings": "^2.0.0",
+        "@bam.tech/react-native-root-siblings": "^2.0.3",
         "prop-types": "^15.5.10"
     }
 }
